tests/baselines/reference/mergedInterfacesWithInheritedPrivates.errors.txt
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithInheritedPrivates.ts(13,7): error TS2421: Class 'D' incorrectly implements interface 'A':
  Types have separate declarations of a private property 'x'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithInheritedPrivates.ts(19,7): error TS2421: Class 'E' incorrectly implements interface 'A':
  Property 'x' is private in type 'A' but not in type 'E'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithInheritedPrivates.ts(26,9): error TS2341: Property 'C.x' is inaccessible.


==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithInheritedPrivates.ts (3 errors) ====
    class C {
        private x: number;
    }
    
    interface A extends C {
        y: string;
    }
    
    interface A {
        z: string;
    }
    
    class D implements A { // error
          ~
!!! error TS2421: Class 'D' incorrectly implements interface 'A':
!!! error TS2421:   Types have separate declarations of a private property 'x'.
        private x: number;
        y: string;
        z: string;
    }
    
    class E implements A { // error
          ~
!!! error TS2421: Class 'E' incorrectly implements interface 'A':
!!! error TS2421:   Property 'x' is private in type 'A' but not in type 'E'.
        x: number;
        y: string;
        z: string;
    }
    
    var a: A;
    var r = a.x; // error
            ~~~
!!! error TS2341: Property 'C.x' is inaccessible.